--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <section class="completed-projects">
             <div class="container-completed-projects-div">
                 <ul class="table-comleted-projects">
-                    <li class="table-completed-project-items"><a href="">ROSTOV-ON-DON, ADMIRAL</a></li>
-                    <li class="table-completed-project-items"><a href="">SOCHI THIEVES</a></li>
-                    <li class="table-completed-project-items"><a href="">ROSTOV-ON-DON PATRIOTIC</a></li>
+                    <li class="table-completed-project-items"><a class="link-admiral special-color">ROSTOV-ON-DON, ADMIRAL</a></li>
+                    <li class="table-completed-project-items link-thieves"><a>SOCHI THIEVES</a></li>
+                    <li class="table-completed-project-items link-patriotic"><a>ROSTOV-ON-DON PATRIOTIC</a></li>
                 </ul>
                 <div class="completed-projects-div">
                     <div class="completed-projects-flex">
