make links and description

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <section class="completed-projects">
             <div class="container-completed-projects-div">
                 <ul class="table-comleted-projects">
-                    <li class="table-completed-project-items"><a class="link-admiral special-color">ROSTOV-ON-DON, ADMIRAL</a></li>
-                    <li class="table-completed-project-items link-thieves"><a>SOCHI THIEVES</a></li>
-                    <li class="table-completed-project-items link-patriotic"><a>ROSTOV-ON-DON PATRIOTIC</a></li>
+                    <li class="table-completed-project-items"><a class="link-admiral link-hotels">ROSTOV-ON-DON, ADMIRAL</a></li>
+                    <li class="table-completed-project-items"><a class="link-thieves link-hotels">SOCHI THIEVES</a></li>
+                    <li class="table-completed-project-items"><a class="link-patriotic link-hotels">ROSTOV-ON-DON PATRIOTIC</a></li>
                 </ul>
                 <div class="completed-projects-div">
                     <div class="completed-projects-flex">
@@ -29,15 +29,23 @@
                         <div class="apartment-area">
                             <div class="completed-projects-items-div">
                                 <h3 class="special-color">CITY</h3>
-                                <span>Rostov-on-Don LCD admiral</span>
+                                <span class="admiral-desc">Rostov-on-Don<br>LCD admiral</span>
+                                <span class="thieves-desc">Sochi<br>Thieves</span>
+                                <span class="patriotic-desc">Rostov-on-Don<br>Patriotic</span>
+
                             </div>
                             <div class="completed-projects-items-div">
                                 <h3 class="special-color">APARTMENT AREA</h3>
-                                <span>81 m2</span>
+                                <span class="admiral-desc">81 m2</span>
+                                <span class="thieves-desc">105 m2</span>
+                                <span class="patriotic-desc">93 m2</span>
+
                             </div>
                             <div class="completed-projects-items-div">
                                 <h3 class="special-color">REPAIR TIME</h3>
-                                <span>3.5 months</span>
+                                <span class="admiral-desc">3.5 months</span>
+                                <span class="thieves-desc">4 months</span>
+                                <span class="patriotic-desc">3 months</span>
                             </div><div class="completed-projects-items-div">
                                 <h3 class="special-color">REPAIR COST</h3>
                                 <span>Upon request</span>
